--- a/services/image-to-ascii-api/serverless.yml
+++ b/services/image-to-ascii-api/serverless.yml
@@ -23,6 +23,9 @@ service: image2pngascii
 provider:
   name: aws
   runtime: python3.6
+  apiGateway:
+    binaryMediaTypes:
+      - '*/*'
   logs:
     restApi: true
 
@@ -120,13 +123,6 @@ functions:
 
 plugins:
   - serverless-python-requirements
-  - serverless-apigwy-binary
-  - serverless-apigw-binary
 custom:
   pythonRequirements:
     dockerizePip: true
-  apigwBinary:
-    types:
-      - 'image/jpeg'
-      - 'image/png'
-      - 'application/json'
