--- a/services/image-to-ascii-api/package.json
+++ b/services/image-to-ascii-api/package.json
@@ -2,10 +2,7 @@
   "name": "image2pngascii",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {},
-  "devDependencies": {
-    "serverless-apigw-binary": "^0.4.4",
-    "serverless-apigwy-binary": "^1.0.0",
+  "dependencies": {
     "serverless-python-requirements": "^5.0.1"
   }
 }
