--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,9 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "core-js": "^3.6.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "regenerator-runtime": "^0.13.3"
   }
 }
