--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "core-js": "^3.6.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-grid-gallery": "^0.5.5",
     "regenerator-runtime": "^0.13.3"
   }
 }
