--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-grid-gallery": "^0.5.5",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.3",
+    "uuid": "^3.3.3"
   }
 }
