--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,10 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.1",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.12.10",
+    "style-loader": "^1.1.2",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
